fixed index.html text and added spacing

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -48,6 +48,7 @@ body {
     background-color: #f0f0f0;
     min-height: 100vh; /* Use min-height to ensure it fills the screen */
     overflow-x: hidden;
+    
 }
 
 .card {
@@ -87,6 +88,7 @@ body {
 }
 
 .content li {
+    margin-top: 7px;
     text-align: left;
 }
 
